--- a/package.json
+++ b/package.json
@@ -8,46 +8,47 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "prerender": "http-server -c-1 dist/angular-ssr-course/browser", 
-    "dev:ssr": "ng serve", 
-    "build:ssr": "ng build --configuration=production", 
+    "prerender": "http-server -c-1 dist/angular-ssr-course/browser",
+    "dev:ssr": "ng serve",
+    "build:ssr": "ng build --configuration=production",
     "serve:ssr": "node dist/angular-ssr-course/server/server.mjs"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^21.0.1",
-    "@angular/cdk": "^21.0.1",
-    "@angular/common": "^21.0.1",
-    "@angular/compiler": "^21.0.1",
-    "@angular/core": "^21.0.1",
-    "@angular/forms": "^21.0.1",
-    "@angular/material": "^21.0.1",
-    "@angular/platform-browser": "^21.0.1",
-    "@angular/platform-browser-dynamic": "^21.0.1",
-    "@angular/platform-server": "^21.0.1",
-    "@angular/router": "^21.0.1",
-    "@angular/ssr": "^21.0.1",
-    "express": "^4.18.2",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.15.0"
+    "@angular/animations": "^21.0.6",
+    "@angular/cdk": "^21.0.5",
+    "@angular/common": "^21.0.6",
+    "@angular/compiler": "^21.0.6",
+    "@angular/core": "^21.0.6",
+    "@angular/forms": "^21.0.6",
+    "@angular/material": "^21.0.5",
+    "@angular/platform-browser": "^21.0.6",
+    "@angular/platform-browser-dynamic": "^21.0.6",
+    "@angular/platform-server": "^21.0.6",
+    "@angular/router": "^21.0.6",
+    "@angular/ssr": "^21.0.4",
+    "express": "^5.2.1",
+    "rxjs": "~7.8.2",
+    "tslib": "^2.8.1",
+    "zone.js": "~0.16.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^21.0.1",
-    "@angular/cli": "^21.0.1",
-    "@angular/compiler-cli": "^21.0.1",
-    "@types/express": "^5.0.0",
-    "@types/jasmine": "^5.1.4",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^22.10.0",
-    "http-server": "^14.0.0",
-    "jasmine-core": "~3.8.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.2",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "@angular-devkit/build-angular": "^21.0.4",
+    "@angular/cli": "^21.0.4",
+    "@angular/compiler-cli": "^21.0.6",
+    "@types/express": "^5.0.6",
+    "@types/jasmine": "^5.1.13",
+    "@types/jasminewd2": "~2.0.13",
+    "@types/node": "^25.0.3",
+    "http-server": "^14.1.1",
+    "jasmine-core": "~5.13.0",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "~6.4.4",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage-istanbul-reporter": "~3.0.3",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
+    "prettier": "^3.7.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
