--- a/package.json
+++ b/package.json
@@ -2,58 +2,52 @@
   "name": "angular-ssr-course",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
     "start:dev": "ng serve",
     "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e",
-    "prerender": "http-server -c-1 dist/angular-ssr-course/browser",
-    "dev:ssr": "ng run angular-ssr-course:serve-ssr",
-    "build:ssr": "ng build --configuration=production && ng run angular-ssr-course:server",
+    "build:ssr": "ng build --configuration=production",
     "serve:ssr": "node dist/angular-ssr-course/server/server.mjs",
-    "prepare": "npm run build:ssr",
-    "start": "npm run serve:ssr"
+    "start": "npm run build:ssr && npm run serve:ssr",
+    "prepare": "npm run build:ssr"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^21.0.8",
-    "@angular/cdk": "^21.0.6",
-    "@angular/common": "^21.0.8",
-    "@angular/compiler": "^21.0.8",
-    "@angular/core": "^21.0.8",
-    "@angular/forms": "^21.0.8",
-    "@angular/material": "^21.0.6",
-    "@angular/platform-browser": "^21.0.8",
-    "@angular/platform-browser-dynamic": "^21.0.8",
-    "@angular/platform-server": "^21.0.8",
-    "@angular/router": "^21.0.8",
-    "@angular/ssr": "^21.0.5",
+    "@angular/animations": "^21.1.1",
+    "@angular/cdk": "^21.1.1",
+    "@angular/common": "^21.1.1",
+    "@angular/compiler": "^21.1.1",
+    "@angular/core": "^21.1.1",
+    "@angular/forms": "^21.1.1",
+    "@angular/material": "^21.1.1",
+    "@angular/platform-browser": "^21.1.1",
+    "@angular/platform-browser-dynamic": "^21.1.1",
+    "@angular/platform-server": "^21.1.1",
+    "@angular/router": "^21.1.1",
+    "@angular/ssr": "^21.1.1",
     "express": "^5.2.1",
     "rxjs": "~7.8.2",
     "tslib": "^2.8.1",
     "zone.js": "~0.16.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^21.0.5",
-    "@angular/cli": "^21.0.5",
-    "@angular/compiler-cli": "^21.0.8",
+    "@angular-devkit/build-angular": "^21.1.1",
+    "@angular/cli": "^21.1.1",
+    "@angular/compiler-cli": "^21.1.1",
     "@types/express": "^5.0.6",
-    "@types/jasmine": "^5.1.14",
-    "@types/node": "^25.0.6",
+    "@types/jasmine": "^6.0.0",
+    "@types/node": "^25.0.10",
     "angular-eslint": "21.1.0",
-    "eslint": "^9.39.1",
+    "eslint": "^9.39.2",
     "http-server": "^14.1.1",
-    "jasmine-core": "~5.13.0",
+    "jasmine-core": "~6.0.1",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "^2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "^2.1.0",
-    "prettier": "^3.7.4",
+    "prettier": "^3.8.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
-    "typescript-eslint": "8.47.0"
+    "typescript-eslint": "8.54.0"
   }
 }
