--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,19 +1,9 @@
-/* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
-  "extends": "./tsconfig.json",
+  "extends": "./tsconfig.base.json",
   "compilerOptions": {
-    "outDir": "./out-tsc/app",
-    "types": [
-      "node"
-    ]
+    "outDir": "../out-tsc/app",
+    "baseUrl": "./",
+    "types": []
   },
-  "files": [
-    "src/main.ts",
-    "src/polyfills.ts",
-    "src/main.server.ts",
-    "server.ts"
-  ],
-  "include": [
-    "src/**/*.d.ts"
-  ]
+  "include": ["src/**/*.ts","server.ts"]
 }
