--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build:ssr": "ng build --configuration=production",
     "serve:ssr": "node dist/angular-ssr-course/server/server.mjs",
     "start": "npm run build:ssr && npm run serve:ssr",
-    "prepare": "npm run build:ssr"
+    "prepare": "npm run build:ssr",
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
