--- a/package.json
+++ b/package.json
@@ -12,30 +12,30 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^21.1.3",
-    "@angular/cdk": "^21.1.3",
-    "@angular/common": "^21.1.3",
-    "@angular/compiler": "^21.1.3",
-    "@angular/core": "^21.1.3",
-    "@angular/forms": "^21.1.3",
-    "@angular/material": "^21.1.3",
-    "@angular/platform-browser": "^21.1.3",
-    "@angular/platform-browser-dynamic": "^21.1.3",
-    "@angular/platform-server": "^21.1.3",
-    "@angular/router": "^21.1.3",
-    "@angular/ssr": "^21.1.3",
+    "@angular/animations": "^21.1.4",
+    "@angular/cdk": "^21.1.4",
+    "@angular/common": "^21.1.4",
+    "@angular/compiler": "^21.1.4",
+    "@angular/core": "^21.1.4",
+    "@angular/forms": "^21.1.4",
+    "@angular/material": "^21.1.4",
+    "@angular/platform-browser": "^21.1.4",
+    "@angular/platform-browser-dynamic": "^21.1.4",
+    "@angular/platform-server": "^21.1.4",
+    "@angular/router": "^21.1.4",
+    "@angular/ssr": "^21.1.4",
     "express": "^5.2.1",
     "rxjs": "~7.8.2",
     "tslib": "^2.8.1",
     "zone.js": "~0.16.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^21.1.3",
-    "@angular/cli": "^21.1.3",
-    "@angular/compiler-cli": "^21.1.3",
+    "@angular-devkit/build-angular": "^21.1.4",
+    "@angular/cli": "^21.1.4",
+    "@angular/compiler-cli": "^21.1.4",
     "@types/express": "^5.0.6",
     "@types/jasmine": "^6.0.0",
-    "@types/node": "^25.2.2",
+    "@types/node": "^25.2.3",
     "angular-eslint": "21.2.0",
     "eslint": "^9.39.2",
     "http-server": "^14.1.1",
@@ -49,6 +49,7 @@
     "prettier": "^3.8.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
-    "typescript-eslint": "8.54.0"
-  }
+    "typescript-eslint": "8.55.0"
+  },
+  "packageManager": "pnpm@10.29.3"
 }
