--- a/angular.json
+++ b/angular.json
@@ -21,9 +21,17 @@
               "base": "dist/angular-ssr-course"
             },
             "index": "src/index.html",
+            "polyfills": [
+              "src/polyfills.ts"
+            ],
             "tsConfig": "tsconfig.app.json",
-            "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/styles.scss"],
+            "assets": [
+              "src/favicon.ico",
+              "src/assets"
+            ],
+            "styles": [
+              "src/styles.scss"
+            ],
             "scripts": [],
             "extractLicenses": false,
             "sourceMap": true,
@@ -31,7 +39,7 @@
             "namedChunks": true,
             "browser": "src/main.ts",
             "server": "src/main.server.ts",
-            "prerender": false,
+            "prerender": true,
             "ssr": {
               "entry": "server.ts"
             }
@@ -75,7 +83,11 @@
             "buildTarget": "angular-ssr-course:build"
           },
           "configurations": {
-            "development": {},
+            "development": {
+              "optimization": false,
+              "extractLicenses": false,
+              "sourceMap": true
+            },
             "production": {
               "buildTarget": "angular-ssr-course:build:production"
             }
@@ -91,9 +103,13 @@
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
             "main": "src/test.ts",
+            "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
-            "assets": ["src/favicon.ico", "src/assets"],
+            "assets": [
+              "src/favicon.ico",
+              "src/assets"
+            ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
               "src/styles.scss"
@@ -112,19 +128,12 @@
               "devServerTarget": "angular-ssr-course:serve:production"
             }
           }
-        },
-        "lint": {
-          "builder": "@angular-eslint/builder:lint",
-          "options": {
-            "lintFilePatterns": ["src/**/*.ts", "src/**/*.html"]
-          }
         }
       }
     }
   },
   "cli": {
-    "analytics": "fa1e8b50-e624-42fd-9564-a9c98d1ad337",
-    "schematicCollections": ["angular-eslint"]
+    "analytics": "fa1e8b50-e624-42fd-9564-a9c98d1ad337"
   },
   "schematics": {
     "@schematics/angular:component": {
