--- a/package.json
+++ b/package.json
@@ -2,54 +2,53 @@
   "name": "angular-ssr-course",
   "version": "0.0.0",
   "scripts": {
-    "start:dev": "ng serve",
+    "ng": "ng",
+    "start": "ng serve",
     "build": "ng build",
-    "build:ssr": "ng build --configuration=production",
-    "serve:ssr": "node dist/angular-ssr-course/server/server.mjs",
-    "start": "npm run build:ssr && npm run serve:ssr",
-    "prepare": "npm run build:ssr",
-    "test": "ng test"
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e",
+    "prerender": "http-server -c-1 dist/angular-ssr-course/browser", 
+    "dev:ssr": "ng serve", 
+    "build:ssr": "ng build --configuration=production", 
+    "serve:ssr": "node dist/angular-ssr-course/server/server.mjs"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^21.1.5",
-    "@angular/cdk": "^21.1.5",
-    "@angular/common": "^21.1.5",
-    "@angular/compiler": "^21.1.5",
-    "@angular/core": "^21.1.5",
-    "@angular/forms": "^21.1.5",
-    "@angular/material": "^21.1.5",
-    "@angular/platform-browser": "^21.1.5",
-    "@angular/platform-browser-dynamic": "^21.1.5",
-    "@angular/platform-server": "^21.1.5",
-    "@angular/router": "^21.1.5",
-    "@angular/ssr": "^21.1.4",
-    "express": "^5.2.1",
-    "rxjs": "~7.8.2",
-    "tslib": "^2.8.1",
-    "zone.js": "~0.16.1"
+    "@angular/animations": "^21.0.1",
+    "@angular/cdk": "^21.0.1",
+    "@angular/common": "^21.0.1",
+    "@angular/compiler": "^21.0.1",
+    "@angular/core": "^21.0.1",
+    "@angular/forms": "^21.0.1",
+    "@angular/material": "^21.0.1",
+    "@angular/platform-browser": "^21.0.1",
+    "@angular/platform-browser-dynamic": "^21.0.1",
+    "@angular/platform-server": "^21.0.1",
+    "@angular/router": "^21.0.1",
+    "@angular/ssr": "^21.0.1",
+    "express": "^4.18.2",
+    "rxjs": "~7.8.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^21.1.4",
-    "@angular/cli": "^21.1.4",
-    "@angular/compiler-cli": "^21.1.5",
-    "@types/express": "^5.0.6",
-    "@types/jasmine": "^6.0.0",
-    "@types/node": "^25.3.0",
-    "angular-eslint": "21.2.0",
-    "eslint": "^9.39.2",
-    "http-server": "^14.1.1",
-    "jasmine-core": "~6.0.1",
-    "jasmine-spec-reporter": "~7.0.0",
-    "karma": "~6.4.4",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "^2.2.1",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "^2.2.0",
-    "prettier": "^3.8.1",
+    "@angular-devkit/build-angular": "^21.0.1",
+    "@angular/cli": "^21.0.1",
+    "@angular/compiler-cli": "^21.0.1",
+    "@types/express": "^5.0.0",
+    "@types/jasmine": "^5.1.4",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^22.10.0",
+    "http-server": "^14.0.0",
+    "jasmine-core": "~3.8.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~6.3.2",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.3",
-    "typescript-eslint": "8.56.0"
-  },
-  "packageManager": "pnpm@10.30.1"
+    "typescript": "^5.9.3"
+  }
 }
