--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,9 +1,19 @@
+/* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
-  "extends": "./tsconfig.base.json",
+  "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "../out-tsc/app",
-    "baseUrl": "./",
-    "types": []
+    "outDir": "./out-tsc/app",
+    "types": [
+      "node"
+    ]
   },
-  "include": ["src/**/*.ts","server.ts"]
+  "files": [
+    "src/main.ts",
+    "src/polyfills.ts",
+    "src/main.server.ts",
+    "server.ts"
+  ],
+  "include": [
+    "src/**/*.d.ts"
+  ]
 }
