--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@angular/platform-server": "^21.1.5",
     "@angular/router": "^21.1.5",
     "@angular/ssr": "^21.1.4",
-    "express": "4",
+    "express": "^5.2.1",
     "rxjs": "~7.8.2",
     "tslib": "^2.8.1",
     "zone.js": "~0.16.1"
